--- a/templates/list_rooms.html
+++ b/templates/list_rooms.html
@@ -3,13 +3,11 @@
     <ul>
     {% for room in rooms %}
         <li>
-            <a href="/room/{{ room.id }}">{{ room.name }}</a>
-            o pojemnosci {{ room.capacity }}
-{#            room.available#}
-            {% if room.has_projector %} ma projektor {% else %} nie ma projektora {% endif %}
-            <a href="/room/modify/{{ room.id }}">Edytuj</a>
-            <a href="/room/delete/{{ room.id }}">Usun</a>
-            <a href="/room/reserve/{{ room.id }}">Rezerwuj</a>
+            {% if room.is_reserved_today %}
+                <div style="background: red">{% include 'room_helper.html' %}</div>
+            {% else %}
+                <div style="background: green">   {% include 'room_helper.html' %}</div>
+            {% endif %}
         </li>
     {% endfor %}
     {{ msg }}
